<resources>

    <string name="app_name">TazaSabzi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="user_name">User Name: %1$s</string>
    <string name="hello_blank_fragment">Hello Home fragment</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="username_hint">Username</string>
    <string name="password_edt">Password</string>
    <string name="email">Email</string>
    <string name="username_hint_for_update">new Username</string>
    <string name="password_edt_for_update">new Password</string>
    <string name="email_for_update">new Email</string>
    <string name="already_have_account">If already have an account? -Login</string>
    <string name="app_name_">Taza Sabzi</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="open">true</string>
    <string name="close">false</string>
    <string name="about_us">Welcome to our B2B Vegetable Market Place, a revolutionary mobile app that connects local businesses with fresh, locally sourced produce.Our mission is to make it easy for businesses to access high-quality, locally grown fruits and vegetables while supporting local farmers and reducing their carbon footprint. By providing a convenient, one-stop-shop for all their produce needs, we aim to save businesses time and money, while also supporting the local community.
    </string>
    <string name="title_activity_my_stock">MyStockActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>