<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_new"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/background_login"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_male_user"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="20dp"
            android:text="Sign Up"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edUsername"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="#FF9800"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="#FF9800"
            android:textColorHint="#B6A1A1" />

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="#FF9800"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="#FF9800"
            android:textColorHint="#B6A1A1" />

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="#FF9800"
            android:hint="@string/password_edt"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#FF9800"
            android:textColorHint="#B6A1A1" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:backgroundTint="#FF9800"
            android:text="@string/sign_up_btn"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/loginlink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/already_have_account"
            android:textColor="#F4F0F0"
            android:textSize="12sp" />

    </LinearLayout>

</RelativeLayout>