<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_new"
    tools:context=".top_navbar_actions.ProfileActivity">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/background_login"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_male_user"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/edUsername"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="#6200ED"
            android:hint="@string/username_hint_for_update"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="#FF9800"
            android:textColorHint="#B6A1A1" />

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="#6200ED"
            android:hint="@string/password_edt_for_update"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#FF9800"
            android:textColorHint="#B6A1A1" />

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="#6200ED"
            android:hint="@string/email_for_update"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="#FF9800"
            android:textColorHint="#B6A1A1" />

        <Button
            android:id="@+id/btn_update_profile"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:backgroundTint="#FF9800"
            android:text="Update Profile"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/loginlink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="Update your profile here"
            android:textColor="#F4F0F0"
            android:textSize="12sp" />

    </LinearLayout>


</RelativeLayout>